[gd_scene load_steps=6 format=3 uid="uid://b7rq3hgs6wpxt"]

[ext_resource type="Script" uid="uid://cqhqc5h1rxfak" path="res://scripts/menu.gd" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://dladuxj04msaq" path="res://assets/fonts/ark-pixel-16px-monospaced-ja.ttf" id="1_l6cm7"]

[sub_resource type="Animation" id="Animation_bqqt6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["TYPE
TO
KILL"]
}

[sub_resource type="Animation" id="Animation_ekxnf"]
resource_name = "intro"
length = 2.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["", "T", "TY", "TYP", "TYPE", "TYPE
T", "TYPE
TO", "TYPE
TO
K", "TYPE
TO
KI", "TYPE
TO
KIL", "TYPE
TO
KILL"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wu84c"]
_data = {
&"RESET": SubResource("Animation_bqqt6"),
&"intro": SubResource("Animation_ekxnf")
}

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/normal_font = ExtResource("1_l6cm7")
theme_override_font_sizes/normal_font_size = 76
bbcode_enabled = true
text = "TYPE
TO
KILL"
fit_content = true
autowrap_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu/MarginContainer/VBoxContainer/RichTextLabel"]
libraries = {
&"": SubResource("AnimationLibrary_wu84c")
}
autoplay = "intro"

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="NewRunButton" type="Button" parent="Menu/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 36
text = "New Run"

[node name="OptionsButton" type="Button" parent="Menu/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 36
text = "Options"

[node name="QuitButton" type="Button" parent="Menu/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 36
text = "Quit"

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer2/NewRunButton" to="Menu" method="_on_new_run_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer2/OptionsButton" to="Menu" method="_on_options_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer2/QuitButton" to="Menu" method="_on_quit_button_pressed"]
